<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.laladev.moneyjinn</groupId>
	<artifactId>moneyjinn-server-parent</artifactId>
	<version>1.2.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>moneyjinn-core</module>
		<module>moneyjinn-hbci-batch</module>
		<module>moneyjinn-model</module>
		<module>moneyjinn-mapstruct-converter</module>
		<module>moneyjinn-service-api</module>
		<module>moneyjinn-service-impl</module>
		<module>moneyjinn-server</module>
	</modules>
	
	<scm>
		<developerConnection>scm:git:https://github.com/OlliL/moneyjinn-server.git</developerConnection>
	  <tag>v1.2.0</tag>
  </scm>

	<properties>
		<moneyjinn-sepa-camt.version>1.0.1</moneyjinn-sepa-camt.version>
	
		<spring.boot.version>3.1.0</spring.boot.version>
		<mybatis.version>3.5.13</mybatis.version>
		<mybatis-spring.version>3.0.2</mybatis-spring.version>
		<commons.io.version>2.12.0</commons.io.version>
		<commons.codec.version>1.15</commons.codec.version>
		<apache.tika.version>2.8.0</apache.tika.version>
		<jjwt.version>0.11.5</jjwt.version>
		<lombok.version>1.18.28</lombok.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<swagger.version>2.2.10</swagger.version>
		<openapi-generator.version>6.6.0</openapi-generator.version>

		<!--for hbci-batch only-->
		<hibernate-core.version>6.2.4.Final</hibernate-core.version>
		<hbci4j-core.version>4.0.0</hbci4j-core.version>
		<!-- use until native client is fixed - see https://github.com/OpenAPITools/openapi-generator/issues/13968 -->
		<httpclient.version>5.2.1</httpclient.version>

		<maven-compiler-plugin>3.11.0</maven-compiler-plugin>
		
		<junit.version>5.10.0-M1</junit.version>
		<mockito.version>5.3.1</mockito.version>
		<juniversalchardet.version>2.4.0</juniversalchardet.version>
		<opencsv.version>5.7.1</opencsv.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<java.version>17</java.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
    				<groupId>org.junit</groupId>
    				<artifactId>junit-bom</artifactId>
    				<version>${junit.version}</version>
    				<type>pom</type>
				<scope>import</scope>
			</dependency>
			
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-sepa-camt</artifactId>
				<version>${moneyjinn-sepa-camt.version}</version>
			</dependency>

			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-mapstruct-converter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-service-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-service-impl</artifactId>
				<version>${project.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>${opencsv.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons.codec.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis-spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tika</groupId>
				<artifactId>tika-core</artifactId>
				<version>${apache.tika.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jjwt.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jjwt.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-core</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate-core.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.hbci4j</groupId>
				<artifactId>hbci4j-core</artifactId>
				<version>${hbci4j-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents.client5</groupId>
				<artifactId>httpclient5</artifactId>
				<version>${httpclient.version}</version>
			</dependency>

			<!-- TEST SCOPE -->
			<dependency>
    				<groupId>org.mockito</groupId>
    				<artifactId>mockito-core</artifactId>
    				<version>${mockito.version}</version>
    				<scope>test</scope>
			</dependency>
			<dependency>
    				<groupId>org.mockito</groupId>
    				<artifactId>mockito-junit-jupiter</artifactId>
    				<version>${mockito.version}</version>
    				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.albfernandez</groupId>
				<artifactId>juniversalchardet</artifactId>
				<version>${juniversalchardet.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin}</version>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<version>${openapi-generator.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M7</version>
			</plugin>
		</plugins>
	</build>

</project>